# clap-logflag

./: Cargo.toml  ChangeLog.txt  README.md  gen_readme.sh
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
examples/: default_logging.rs  integration_test.rs  log_some_lines.rs  print_logging_config.rs  simple_cli.rs
src/: clap.rs  config.rs  fern.rs  lib.rs  parser.rs
src/parser/: parser.rs
tests/: capture_logging.rs  dummy.rs
