[package]
name = "clap-logflag"
authors = ["Sebastian Messmer <messmer@cryfs.org>"]
description = "Adds a `--log` flag to clap based applications to allow CLI users to configure logging from the command line. Can log to stderr, files and syslog."
documentation = "https://docs.rs/clap-logflag"
version = "0.0.1"
edition = "2021"
# TODO categories, description, keywords
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/smessmer/clap-logflag"
rust-version = "1.78"

[dependencies]
log = "^0.4.8"
fern = {version = "^0.7.1", features = ["syslog-7"]}
syslog = "^7"
anyhow = "^1.0.46"
chumsky = "^0.9"
clap = {version = "^4", features = ["derive"]}

[dev-dependencies]
rstest = "^0.24"
rstest_reuse = "^0.7"
