[package]
name = "clap-logflag"
authors = ["Sebastian Messmer <messmer@cryfs.org>"]
description = "This library can be used to add a `--log` flag to clap based command line applications that allows users to configure logging from the command line. It can log to stderr, files and syslog, powered by the fern logging backend."
documentation = "https://docs.rs/clap-logflag"
version = "0.1.0"
edition = "2021"
categories = ["command-line-interface", "config", "development-tools"]
keywords = ["cli", "clap", "logging", "log", "syslog"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/smessmer/clap-logflag"
rust-version = "1.78"

[dependencies]
log = "^0.4.8"
fern = {version = "^0.7.1", features = ["syslog-7", "colored"]}
syslog = "^7"
anyhow = "^1.0.46"
clap = {version = "^4", features = ["derive"]}
humantime = "^2.1"
embed-doc-image = "^0.1.4"

[dev-dependencies]
rstest = "^0.24"
rstest_reuse = "^0.7"
escargot = "^0.5"
assert_fs = "^1.1"
predicates = "^3.1"
